Redocly: Fix mobile sidebar alignment

--- a/assets/css/v2/style.css
+++ b/assets/css/v2/style.css
@@ -954,6 +954,7 @@ nav {
 
     .redoc-wrap .menu-content {
       top: 4rem !important; /* Override redocly's inline top property */
+      left: 0;
     }
   }
 }
